Fix T74019 Eevee High Quality Normals causing pitch black faces

Was due to a mistake when removing previous code...